--- a/web/src/main/webapp/WEB-INF/templates/customerListCRMScreen.html
+++ b/web/src/main/webapp/WEB-INF/templates/customerListCRMScreen.html
@@ -3,121 +3,19 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
+<!-- START COMMON META AND TITLE -->
+<th:block th:include="fragments/common_meta_title"></th:block>
+<!-- END COMMON META AND TITLE -->
 
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport"
-	content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-<meta name="description"
-	content="Robust admin is super flexible, powerful, clean &amp; modern responsive bootstrap 4 admin template.">
-<meta name="keywords"
-	content="admin template, robust admin template, dashboard template, flat admin template, responsive admin template, web app, crypto dashboard, bitcoin dashboard">
-<meta name="author" content="PIXINVENT">
-<title>Customer Relationship Management</title>
+<!-- START COMMON CSS -->
+<th:block th:include="fragments/common_css"></th:block>
+<!-- END COMMON CSS -->
 
-<!--  PHẦN BỔ SUNG -->
-<link rel="stylesheet"
-	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-<link rel="stylesheet"
-	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-<link rel="stylesheet"
-	href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-	rel="stylesheet">
-
-<link rel="stylesheet"
-	href="https://cdn.jsdelivr.net/npm/jquery-resizable-columns@0.2.3/dist/jquery.resizableColumns.min.css">
-<link rel="stylesheet"
-	href="https://cdn.jsdelivr.net/npm/bootstrap-table@1.23.4/dist/bootstrap-table.min.css">
-
-<!-- <link rel="stylesheet"
-	href="https://cdn.jsdelivr.net/npm/bootstrap-table@1.23.4/dist/extensions/fixed-columns/bootstrap-table-fixed-columns.min.css"> -->
-
-
-<!--  <link rel="stylesheet" href="<c:url value='/assets/css/new_style.css' />"> -->
-<link rel="stylesheet" type="text/css"
-	href="resources/css/new_style.css">
-
+<link rel="stylesheet" type="text/css" href="resources/css/new_style.css">
 <link rel="stylesheet" type="text/css" href="resources/css/status.css">
-
-<link rel="stylesheet" type="text/css"
-	href="resources/css/buttonGroupFunction.css">
-
-<link rel="stylesheet" type="text/css"
-	href="resources/app-assets/css/components_new.min.css">
-
-<!-- PHẦN CHỈNH SỬA KHI HỆ THỐNG ASSETS TRÊN INTERNET BỊ LỖI -->
-<!-- ICON -->
-<link rel="apple-touch-icon"
-	href="resources/app-assets/images/ico/apple-icon-120.png">
-<link rel="shortcut icon" type="image/x-icon"
-	href="resources/app-assets/images/ico/favicon.ico">
-<!-- BEGIN VENDOR CSS -->
-<link rel="stylesheet" type="text/css"
-	href="resources/app-assets/css/vendors.min.css">
-<link rel="stylesheet" type="text/css"
-	href="resources/app-assets/vendors/css/forms/icheck/icheck.css">
-<link rel="stylesheet" type="text/css"
-	href="resources/app-assets/vendors/css/forms/icheck/custom.css">
-<link rel="stylesheet" type="text/css"
-	href="resources/app-assets/vendors/css/charts/morris.css">
-<link rel="stylesheet" type="text/css"
-	href="resources/app-assets/vendors/css/extensions/unslider.css">
-<link rel="stylesheet" type="text/css"
-	href="resources/app-assets/vendors/css/weather-icons/climacons.min.css">
-<!-- END VENDOR CSS -->
-<!-- BEGIN ROBUST CSS-->
-<link rel="stylesheet" type="text/css"
-	href="resources/app-assets/css/app.min.css">
-<!-- END ROBUST CSS-->
-<!-- BEGIN Page Level CSS-->
-<link rel="stylesheet" type="text/css"
-	href="resources/app-assets/css/core/menu/menu-types/vertical-compact-menu.min.css">
-<link rel="stylesheet" type="text/css"
-	href="resources/app-assets/css/core/colors/palette-gradient.min.css">
-<link rel="stylesheet" type="text/css"
-	href="resources/app-assets/css/core/colors/palette-climacon.css">
-<link rel="stylesheet" type="text/css"
-	href="resources/app-assets/css/pages/users.min.css">
-<!-- END Page Level CSS-->
-
-
-
-
-
-<!-- <link rel="apple-touch-icon" href="https://mksol.vn/themes/robust-admin/app-assets/images/ico/apple-icon-120.png">
-    <link rel="shortcut icon" type="image/x-icon" href="https://mksol.vn/themes/robust-admin/app-assets/images/ico/favicon.ico"> -->
-
-<link
-	href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i%7CMuli:300,400,500,700"
-	rel="stylesheet">
-
-<!-- BEGIN VENDOR CSS-->
-<!--  <link rel="stylesheet" type="text/css" href="https://mksol.vn/themes/robust-admin/app-assets/css/vendors.css">
-    <link rel="stylesheet" type="text/css" href="https://mksol.vn/themes/robust-admin/app-assets/vendors/css/forms/icheck/icheck.css">
-    <link rel="stylesheet" type="text/css" href="https://mksol.vn/themes/robust-admin/app-assets/vendors/css/forms/icheck/custom.css">
-    <link rel="stylesheet" type="text/css" href="https://mksol.vn/themes/robust-admin/app-assets/vendors/css/charts/morris.css">
-    <link rel="stylesheet" type="text/css" href="https://mksol.vn/themes/robust-admin/app-assets/vendors/css/extensions/unslider.css">
-    <link rel="stylesheet" type="text/css" href="https://mksol.vn/themes/robust-admin/app-assets/vendors/css/weather-icons/climacons.min.css"> -->
-<!-- END VENDOR CSS-->
-
-<!-- BEGIN ROBUST CSS-->
-<!-- <link rel="stylesheet" type="text/css" href="https://mksol.vn/themes/robust-admin/app-assets/css/app.css"> -->
-<!-- END ROBUST CSS-->
-<!-- BEGIN Page Level CSS-->
-<!-- <link rel="stylesheet" type="text/css" href="https://mksol.vn/themes/robust-admin/app-assets/css/core/menu/menu-types/horizontal-top-icon-menu.css">
-    <link rel="stylesheet" type="text/css" href="https://mksol.vn/themes/robust-admin/app-assets/css/core/colors/palette-climacon.css">
-    <link rel="stylesheet" type="text/css" href="https://mksol.vn/themes/robust-admin/app-assets/css/pages/users.css"> -->
-<!-- END Page Level CSS-->
-
-<!-- BEGIN Custom CSS-->
-<!-- <link rel="stylesheet" type="text/css" href="https://mksol.vn/themes/robust-admin/assets/css/style.css"> -->
-
-
-
-
+<link rel="stylesheet" type="text/css" href="resources/css/buttonGroupFunction.css">
 </head>
+
 <body
 	class="vertical-layout vertical-compact-menu 2-columns   menu-expanded fixed-navbar"
 	data-open="click" data-menu="vertical-compact-menu"
