--- a/web/src/main/webapp/WEB-INF/templates/fragments/leftNavCRM.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/leftNavCRM.html
@@ -13,7 +13,8 @@
 				data-menu="menu-navigation">
 				<li class="nav-item has-sub" data-page="crm-web/home" style=""><a
 					class="menu-item" href="/crm-web/home"><i class="icon-home"></i><span
-						class="menu-title" data-i18n="nav.dash.main">Trang chủ</span></a></li>
+						class="menu-title" data-i18n="nav.dash.main">Trang chủ</span></a>
+				</li>
 
 				<li class="nav-item has-sub" style=""><a class="menu-item"
 					href="/crm-web/customer-list"><i class="icon-note"></i><span
@@ -24,9 +25,23 @@
 							data-i18n="nav.dash.fitness">Danh sách khách hàng</a></li>
 						<li><a class="menu-item" href="#"
 							data-i18n="nav.dash.project">Hành trình khách hàng</a></li>
-						<li><a class="menu-item" href="/crm-web/customer-management" 
+						<li><a class="menu-item" href="/crm-web/customer-management"
 							data-i18n="nav.dash.ecommerce">Tỷ lệ chuyển đổi</a></li>
-					</ul></li> <!--Để tạm thêm khách hàng_hanh tại đây -->
+					</ul>
+				</li>
+				<!--Để tạm thêm khách hàng_hanh tại đây -->
+				
+				<li class="nav-item has-sub" style=""><a class="menu-item"
+					href="/crm-web/orders"><i class="icon-drawer"></i><span
+						class="menu-title" data-i18n="nav.templates.main">Đơn hàng</span></a>
+					<ul class="menu-content" style="">
+						<li><a class="menu-item" href="#"
+							data-i18n="nav.dash.fitness">Quản lý trạng thái đơn hàng</a></li>
+						<li><a class="menu-item" href="#"
+							data-i18n="nav.dash.project">Theo dõi đơn hàng</a></li>
+					</ul>
+				</li>
+				
 			</ul>
 		</div>
 	</div>
