--- a/web/src/main/webapp/WEB-INF/templates/fragments/orders/frg_orders.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/orders/frg_orders.html
@@ -1,6 +1,6 @@
 <html xmlns:th="http://www.thymeleaf.org">
-<form id="frmOrders" th:action="@{/orders/save}" method="post">
-	<div id="tblOrders" ></div>
+<form id="frmOrders" th:action="@{/orders/load}" method="get">
+	<div id="tblOrder"></div>
 	<button type="submit" class="btn btn-primary">Save</button>
 	<!-- Message: auto hide -->
     <div id="success-alert" class="alert alert-success" style="display: none">
