Update a few User Interfaces (UI) for order page

--- a/web/src/main/webapp/WEB-INF/templates/fragments/customizeButton.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/customizeButton.html
@@ -9,7 +9,7 @@
 		class="customizer border-left-blue-grey border-left-lighten-4 d-none d-xl-block">
 		<a class="customizer-close" href="#"><i class="ft-x font-medium-3"></i></a><a
 			class="customizer-toggle bg-danger box-shadow-3" href="#"><i
-			class="ft-settings font-medium-3 spinner white"></i></a>
+			class="fas fa-cog font-medium-3 spinner white"></i></a>
 		<div
 			class="customizer-content p-2 ps-container ps-theme-dark ps-active-y"
 			data-ps-id="c466361f-11f7-0448-6538-332e3c7787e0">
