--- a/web/src/main/webapp/WEB-INF/templates/fragments/ordersContentWrapperCRM.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/ordersContentWrapperCRM.html
@@ -8,11 +8,15 @@
 	<div class="content-wrapper">
 		<div class="content-header row">
 			<div class="content-header-left col-md-6 col-12 mb-2">
-				<div class="content content-orders">
-					<a href="#" class="btn-orders orders">Đơn hàng</a> <a href="#"
-						class="btn-orders status">Trạng thái</a> <a href="#"
-						class="btn-orders configuration">Cấu hình</a>
-				</div>
+				 <h3 class="content-header-title">Quản lý đơn hàng</h3>
+				 <div class="row">
+				 	<div class="heading-elements">
+                        <button class="btn btn-primary btn-sm order" fdprocessedid="fzh15n"><i class="fas fa-box-open white"></i> Đơn hàng</button>
+            			<button class="btn btn-primary btn-sm status" fdprocessedid="fzh15n"><i class="fas fa-clipboard-check white"></i> Trạng thái</button>
+            			<button class="btn btn-primary btn-sm config" fdprocessedid="fzh15n"><i class="fas fa-cogs white"></i> Cấu hình</button>
+                	</div>	
+				 </div>
+
 			</div>
 		</div>
 	</div>
