--- a/web/src/main/webapp/WEB-INF/templates/fragments/ordersContentWrapperCRM.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/ordersContentWrapperCRM.html
@@ -8,7 +8,7 @@
 	<div class="content-wrapper">
 		<div class="content-header row">
 			<div class="content-header-left col-md-6 col-12 mb-2">
-				 <h3 class="content-header-title">Quản lý đơn hàng</h3>
+				 <h3 class="content-header-title">Quản lý trạng thái đơn hàng</h3>
 				 <div class="row">
 				 	<div class="heading-elements">
                         <button class="btn btn-primary btn-sm order" fdprocessedid="fzh15n"><i class="fas fa-box-open white"></i> Đơn hàng</button>
