--- a/web/src/main/webapp/WEB-INF/templates/ordersCRMScreen.html
+++ b/web/src/main/webapp/WEB-INF/templates/ordersCRMScreen.html
@@ -8,7 +8,13 @@
 <th:block th:include="fragments/head"></th:block>
 <link type="text/css" rel="stylesheet" href="/library/webjars/handsontable/handsontable.full.min.css" />
 <script th:inline="javascript" src="/library/webjars/handsontable/handsontable.full.min.js"></script>
-<script>console.log("Handsontable:", typeof Handsontable); // Kiểm tra xem Handsontable có sẵn không
+
+<!-- <script th:inline="javascript" src="/library/webjars/jquery/1.12.4/jquery.min.js"></script>
+
+<script th:inline="javascript" src="/library/webjars/jquery-ui/1.12.1/jquery-ui.min.js"></script>
+<script src="https://mksol.vn/themes/robust-admin2/app-assets/js/scripts/ui/jquery-ui/buttons-selects.js" type="text/javascript"></script> -->
+
+<script>console.log("Handsontable:", typeof Handsontable); //Check Handsontable is available or not
 </script>
 <!-- END COMMON META AND TITLE -->
 
@@ -17,9 +23,12 @@
 <th:block th:include="fragments/common_css"></th:block>
 <!-- END COMMON CSS -->
 
-<link rel="stylesheet" type="text/css" href="resources/css/ordersBtnHorizontalMenu.css">	
-<link rel="stylesheet" type="text/css" href="resources/css/new_style.css">
-<link rel="stylesheet" type="text/css" href="resources/css/order	.css">
+<link rel="stylesheet" type="text/css" th:href="@{resources/app-assets/vendors/css/ui/jquery-ui.min.css}">
+<link rel="stylesheet" type="text/css" th:href="@{resources/app-assets/css/plugins/ui/jqueryui.css}">	
+
+<link rel="stylesheet" type="text/css" th:href="@{resources/css/ordersBtnHorizontalMenu.css}">	
+<link rel="stylesheet" type="text/css" th:href="@{resources/css/new_style.css}">
+<link rel="stylesheet" type="text/css" th:href="@{resources/css/order.css}">
 </head>
 
 <body
@@ -27,105 +36,113 @@
 	data-open="click" data-menu="vertical-compact-menu"
 	data-col="2-columns">
 
-	<!-- /////////////////////////////////BEGIN HEADER /////////////////////////////////////////// -->
+	<!-- BEGIN HEADER -->
 	<th:block th:include="fragments/headerCRM"></th:block>
-	<!-- /////////////////////////////////END HEADER /////////////////////////////////////////// -->
+	<!-- END HEADER -->
 	
 
-	<!-- /////////////////////////////////BEGIN LEFT MENU NAVIGATION/////////////////////////////////////////// -->
+	<!-- BEGIN LEFT MENU NAVIGATION -->
 	<th:block th:include="fragments/leftNavCRM"></th:block>
-	<!-- /////////////////////////////////END LEFT MENU NAVIGATION/////////////////////////////////////////// -->
+	<!-- END LEFT MENU NAVIGATION -->
 
 	<!--  BEGIN CONTENT -->
 	<div class="app-content content">
 	
-		<!-- /////////////////////////////////BEGIN CONTENT WRAPPER/////////////////////////////////////////// -->
+		<!-- BEGIN CONTENT WRAPPER -->
 		<th:block th:include="fragments/ordersContentWrapperCRM"></th:block>
-		<!-- /////////////////////////////////END CONTENT WRAPPER/////////////////////////////////////////// -->
+		<!-- END CONTENT WRAPPER -->
 		
-		<div class="row">
-        <div class="col-12">
-            <div class="card">
-                <div class="card-header">
-                    <h4 class="card-title">Điều kiện tìm kiếm</h4>
-                    <a class="heading-elements-toggle"><i class="ft-ellipsis-h font-medium-3"></i></a>
-                    <div class="heading-elements">
-                        <ul class="list-inline mb-0">
-                            <li><a data-action="collapse"><i class="fa-solid fa-minus"></i></a></li>
-                            <li><a data-action="reload"><i class="fa-solid fa-rotate"></i></a></li>
-                            <li><a data-action="expand"><i class="fa-solid fa-expand"></i></a></li>
-                            <li><a data-action="close"><i class="fa-solid fa-xmark"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="card-content collapse show">
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-md-3 col-sm-12">
-                                <fieldset class="text-center">
-                                    <h6>Left Icon</h6>
-                                    <button class="ui-button ui-widget ui-corner-all mb-2" fdprocessedid="949qyj"><span class="ui-icon ft-settings"></span>Left Icon</button>
-                                </fieldset>
-                            </div>
-                            <div class="col-md-3 col-sm-12">
-                                <fieldset class="text-center">
-                                    <h6>Right Icon</h6>
-                                    <button class="ui-button ui-widget ui-corner-all mb-2" fdprocessedid="9oywxd">Right Icon<span class="ui-icon ft-settings"></span></button>
-                                </fieldset>
-                            </div>
-                            <div class="col-md-3 col-sm-12">
-                                <fieldset class="text-center">
-                                    <h6>Top Icon</h6>
-                                    <button class="ui-button ui-widget ui-corner-all mb-2" fdprocessedid="crcoh"><span class="ui-icon ft-settings ui-widget-icon-block"></span>Top Icon</button>
-                                </fieldset>
-                            </div>
-                            <div class="col-md-3 col-sm-12">
-                                <fieldset class="text-center">
-                                    <h6>Bottom Icon</h6>
-                                    <button class="ui-button ui-widget ui-corner-all mb-2" fdprocessedid="8ao62">Bottom Icon<span class="ui-icon ft-settings ui-widget-icon-block"></span></button>
-                                </fieldset>
-                            </div>
-                        </div>
+	<div class="row">
+	    <div class="col-12">
+	        <div class="card">
+	            <div class="card-header">
+	                <h4 class="card-title search-condition">Điều kiện tìm kiếm</h4>
+	                <div class="heading-elements">
+	                    <ul class="list-inline mb-0">
+	                        <li><a data-action="collapse"><i class="fa-solid fa-minus"></i></a></li>
+	                        <li><a data-action="reload"><i class="fa-solid fa-rotate"></i></a></li>
+	                        <li><a data-action="expand"><i class="fa-solid fa-expand"></i></a></li>
+	                        <li><a data-action="close"><i class="fa-solid fa-xmark"></i></a></li>
+	                    </ul>
+	                </div>
+	            </div>
+	            <div class="card-content collapse show">
+	                <div class="card-body search-condition">
+	                    <div class="row">
+	                        <div class="col-md-3 col-sm-12">
+	                            <fieldset class="text-left customer-option">
+	                                <h5>Khách hàng</h5>
+	                                <select style="background-color: white; color: black; width: 100%;">
+	                                    <option value="" disabled selected style="font-style: italic;">Chọn khách hàng</option>
+	                                    <option value="kh1">Khách hàng 1</option>
+	                                    <option value="kh2">Khách hàng 2</option>
+	                                    <option value="kh3">Khách hàng 3</option>
+	                                </select>
+	                            </fieldset>
+	                            <fieldset class="text-left ordercate-option">
+	                                <h5>Loại đơn hàng</h5>
+	                                <select style="background-color: white; color: black; width: 100%;">
+	                                    <option value="" disabled selected style="font-style: italic;">Chọn loại đơn hàng</option>
+	                                    <option value="type1">Loại đơn hàng 1</option>
+	                                    <option value="type2">Loại đơn hàng 2</option>
+	                                    <option value="type3">Loại đơn hàng 3</option>
+	                                </select>
+	                            </fieldset>
+	                        </div>
+	                        
+	                        <div class="col-md-3 col-sm-12">
+	                            <fieldset class="text-left order-status">
+	                                <h5>Trạng thái đơn hàng</h5>
+	                                   <label>
+									        <input type="checkbox" name="orderStatus" value="all" class="custom-checkbox"> Tất cả
+									    </label><br>
+									    <label>
+									        <input type="checkbox" name="orderStatus" value="packing" class="custom-checkbox"> Đóng gói
+									    </label><br>
+									    <label>
+									        <input type="checkbox" name="orderStatus" value="shipping" class="custom-checkbox"> Vận chuyển
+									    </label><br>
+									    <label>
+									        <input type="checkbox" name="orderStatus" value="delivered" class="custom-checkbox"> Giao hàng
+									    </label>
+	                            </fieldset>
+	                        </div>
+	                        <div class="col-md-3 col-sm-12">
+	                            <fieldset class="text-left startdate-option">
+	                                <h5>Ngày lập</h5>
+	                                <input type="date" style="width: 100%; padding: 5px; color: black; background-color: white;">
+	                            </fieldset>
+	                            <fieldset class="text-left delidate-option">
+	                                <h5>Ngày giao</h5>
+	                                <input type="date" style="width: 100%; padding: 5px; color: black; background-color: white;">
+	                            </fieldset>
+	                            <fieldset class="text-right">
+	                            	<button type="submit" class="search-order" style="margin-top: 10px;">Tìm</button>
+	                            </fieldset>
+	                        </div>
+	                    </div>
+	                </div>
+	            </div>
+	        </div>
+	    </div>
+	</div>
+	
+	<div class="row">
+		 <div class="col-12">
+		 	<div class="order-screen">
+				<h4 class="title order-title">Danh sách đơn hàng</h4>
+				<th:block th:include="fragments/orders/frg_orders.html"></th:block>
+			</div>
+		</div>
+	</div>
 
-                        <div class="row">
-                            <div class="col-md-3 col-sm-12">
-                                <fieldset class="text-center">
-                                    <h6>Only Icon</h6>
-                                    <button class="ui-button ui-widget ui-corner-all mb-2" fdprocessedid="9xjpbc"><span class="ui-icon ft-disc"></span></button>
-                                </fieldset>
-                            </div>
-                            <div class="col-md-3 col-sm-12">
-                                <fieldset class="text-center">
-                                    <h6>Both Icons With Text</h6>
-                                    <button class="ui-button ui-widget ui-corner-all mb-2" fdprocessedid="cybhc"><span class="ui-icon ft-wifi"></span>Both Icons<span class="ui-icon ft-airplay"></span></button>
-                                </fieldset>
-                            </div>
-                            <div class="col-md-3 col-sm-12">
-                                <fieldset class="text-center">
-                                    <h6>Both Icons Without Text</h6>
-                                    <button class="ui-button ui-widget ui-corner-all mb-2" fdprocessedid="f3c8e"><span class="ui-icon ft-unlock"></span><span class="ui-icon ft-camera"></span></button>
-                                </fieldset>
-                            </div>
-                            <div class="col-md-3 col-sm-12">
-                                <fieldset class="text-center">
-                                    <h6>Transparent Icon Anchor</h6>
-                                    <a class="ui-button ui-button-link ui-widget ui-corner-all mb-2" href="#"><span class="ui-icon ft-clock"></span></a>
-                                </fieldset>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 		
-		<h4 class="title">Danh sách đơn hàng</h4>
-		<th:block th:include="fragments/orders/frg_orders.html"></th:block>
+		
 		
 	</div>
 	
 	<!-- END CONTENT -->
-	
+		
 	<!-- START CUSTOMIZE BUTTON -->
 	<th:block th:include="fragments/customizeButton"></th:block>
 	<!-- END CUSTOMIZE BUTTON -->
@@ -135,12 +152,9 @@
 	<!-- END COMMON JAVASCRIPT -->
 	
 	<!-- FILE JS BỔ SUNG -->
-	
-	
 	<script type="text/javascript" th:src="@{/resources/js/orders/init.js}"></script>
 	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/navigate.js}"></script>
 	<!-- Screen Javascripts -->
-	
 
 </body>
 </html>
