Seperate fragments: common css, common js, common meta for html pages

--- a/web/src/main/webapp/WEB-INF/templates/fragments/common_javascript.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/common_javascript.html
@@ -1,11 +1,10 @@
-<script
-	src="https://cdn.jsdelivr.net/npm/bootstrap-table@1.23.5/dist/extensions/fixed-columns/bootstrap-table-fixed-columns.min.js"></script>
+
 <!-- BEGIN VENDOR JS-->
 <script src="resources/app-assets/vendors/js/vendors.min.js"></script>
 <!-- END VENDOR JS-->
 <!-- BEGIN PAGE VENDOR JS-->
-<script
-	src="//maps.googleapis.com/maps/api/js?key=AIzaSyBDkKetQwosod2SZ7ZGCpxuJdxY3kxo5Po"></script>
+<!-- <script
+	src="//maps.googleapis.com/maps/api/js?key=AIzaSyBDkKetQwosod2SZ7ZGCpxuJdxY3kxo5Po"></script> -->
 <script src="resources/app-assets/vendors/js/charts/gmaps.min.js"></script>
 <script src="resources/app-assets/vendors/js/forms/icheck/icheck.min.js"></script>
 <script
@@ -26,7 +25,6 @@
 <script
 	src="resources/app-assets/js/scripts/pages/project-task-list.min.js"></script>
 <!-- END PAGE LEVEL JS-->
-
 
 <!-- BEGIN VENDOR JS-->
 <!--<script src="https://mksol.vn/themes/robust-admin/app-assets/vendors/js/vendors.min.js"></script> -->
