--- a/web/src/main/webapp/WEB-INF/templates/customerListCRMScreen.html
+++ b/web/src/main/webapp/WEB-INF/templates/customerListCRMScreen.html
@@ -17,24 +17,24 @@
 </head>
 
 <body
-	class="vertical-layout vertical-compact-menu 2-columns   menu-expanded fixed-navbar"
+	class="vertical-layout vertical-compact-menu 2-columns menu-expanded fixed-navbar"
 	data-open="click" data-menu="vertical-compact-menu"
 	data-col="2-columns">
 
-	<!-- /////////////////////////////////BEGIN HEADER /////////////////////////////////////////// -->
+	<!-- BEGIN HEADER  -->
 	<th:block th:include="fragments/headerCRM"></th:block>
-	<!-- /////////////////////////////////END HEADER /////////////////////////////////////////// -->
+	<!-- END HEADER  -->
 
-	<!-- /////////////////////////////////BEGIN LEFT MENU NAVIGATION/////////////////////////////////////////// -->
+	<!-- BEGIN LEFT MENU NAVIGATION -->
 	<th:block th:include="fragments/leftNavCRM"></th:block>
-	<!-- /////////////////////////////////END LEFT MENU NAVIGATION/////////////////////////////////////////// -->
+	<!-- END LEFT MENU NAVIGATION -->
 
 	<!--  BEGIN CONTENT -->
 	<div class="app-content content">
 
-		<!-- /////////////////////////////////BEGIN CONTENT WRAPPER/////////////////////////////////////////// -->
+		<!-- BEGIN CONTENT WRAPPER -->
 		<th:block th:include="fragments/contentWrapperCRM"></th:block>
-		<!-- /////////////////////////////////END CONTENT WRAPPER/////////////////////////////////////////// -->
+		<!-- END CONTENT WRAPPER -->
 
 		<div class="content-body">
 			<section class="row">
@@ -101,10 +101,9 @@
 							</div>
 						</div>
 
-
-						<!-- /////////////////////////////////BEGIN STATUS OF CUSTOMER/////////////////////////////////////////// -->
+						<!-- BEGIN STATUS OF CUSTOMER -->
 						<th:block th:include="fragments/statusOfCustomer"></th:block>
-						<!-- /////////////////////////////////END STATUS OF CUSTOMER/////////////////////////////////////////// -->
+						<!-- END STATUS OF CUSTOMER -->
 
 
 
@@ -145,10 +144,9 @@
 											<div class="col-sm-12 col-md-6"></div>
 										</div>
 
-
-										<!-- /////////////////////////////////BEGIN CONTENT WRAPPER/////////////////////////////////////////// -->
+										<!-- BEGIN CONTENT WRAPPER -->
 										<th:block th:include="fragments/buttonGroupFunction"></th:block>
-										<!-- /////////////////////////////////END CONTENT WRAPPER/////////////////////////////////////////// -->
+										<!-- END CONTENT WRAPPER -->
 
 
 										<!-- BEGIN BẢNG DANH SÁCH KHÁCH HÀNG VÀ BỘ LỌC -->
@@ -230,8 +228,6 @@
 																gian hoàn thành</span> <input type="date" id="complete-time"
 																placeholder="Thời gian hoàn thành">
 														</div>
-
-
 														<button>Áp dụng lọc</button>
 														<button>Xóa bỏ</button>
 													</form>
@@ -423,13 +419,6 @@
 										</div>
 
 										<!-- END BẢNG DANH SÁCH KHÁCH HÀNG VÀ BỘ LỌC -->
-
-
-
-
-
-
-
 
 										<div class="row">
 											<div class="col-sm-12"></div>
