--- a/web/src/main/webapp/WEB-INF/templates/homeCRMScreen.html
+++ b/web/src/main/webapp/WEB-INF/templates/homeCRMScreen.html
@@ -19,13 +19,13 @@
 	data-open="click" data-menu="vertical-compact-menu"
 	data-col="2-columns">
 
-	<!-- /////////////////////////////////BEGIN HEADER /////////////////////////////////////////// -->
+	<!-- BEGIN HEADER -->
 	<th:block th:include="fragments/headerCRM"></th:block>
-	<!-- /////////////////////////////////END HEADER /////////////////////////////////////////// -->
+	<!-- END HEADER -->
 
-	<!-- /////////////////////////////////BEGIN LEFT MENU NAVIGATION/////////////////////////////////////////// -->
+	<!-- BEGIN LEFT MENU NAVIGATION -->
 	<th:block th:include="fragments/leftNavCRM"></th:block>
-	<!-- /////////////////////////////////END LEFT MENU NAVIGATION/////////////////////////////////////////// -->
+	<!-- END LEFT MENU NAVIGATION -->
 
 	<!--  BEGIN CONTENT -->
 	<div class="app-content content">
