Delete some dependencies not much necessary now and seperate fragments

--- a/web/src/main/webapp/WEB-INF/templates/fragments/common_javascript.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/common_javascript.html
@@ -1,51 +1,53 @@
-
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <!-- BEGIN VENDOR JS-->
-<script src="resources/app-assets/vendors/js/vendors.min.js"></script>
+<script th:src="@{resources/app-assets/vendors/js/vendors.min.js}"></script>
 <!-- END VENDOR JS-->
 <!-- BEGIN PAGE VENDOR JS-->
 <!-- <script
-	src="//maps.googleapis.com/maps/api/js?key=AIzaSyBDkKetQwosod2SZ7ZGCpxuJdxY3kxo5Po"></script> -->
-<script src="resources/app-assets/vendors/js/charts/gmaps.min.js"></script>
-<script src="resources/app-assets/vendors/js/forms/icheck/icheck.min.js"></script>
+	th:src="//maps.googleapis.com/maps/api/js?key=AIzaSyBDkKetQwosod2SZ7ZGCpxuJdxY3kxo5Po"></script> -->
+<script th:src="@{resources/app-assets/vendors/js/charts/gmaps.min.js}"></script>
+<script th:src="@{resources/app-assets/vendors/js/forms/icheck/icheck.min.js}"></script>
 <script
-	src="resources/app-assets/vendors/js/extensions/jquery.knob.min.js"></script>
-<script src="resources/app-assets/vendors/js/charts/raphael-min.js"></script>
-<script src="resources/app-assets/vendors/js/charts/morris.min.js"></script>
-<script src="resources/app-assets/vendors/js/extensions/unslider-min.js"></script>
-<script src="resources/app-assets/vendors/js/charts/echarts/echarts.js"></script>
+	th:src="@{resources/app-assets/vendors/js/extensions/jquery.knob.min.js}"></script>
+<script th:src="@{resources/app-assets/vendors/js/charts/raphael-min.js}"></script>
+<script th:src="@{resources/app-assets/vendors/js/charts/morris.min.js}"></script>
+<script th:src="@{resources/app-assets/vendors/js/extensions/unslider-min.js}"></script>
+<script th:src="@{resources/app-assets/vendors/js/charts/echarts/echarts.js}"></script>
 <!-- END PAGE VENDOR JS-->
 <!-- BEGIN ROBUST JS-->
-<script src="resources/app-assets/js/core/app-menu.min.js"></script>
-<script src="resources/app-assets/js/core/app.min.js"></script>
-<script src="resources/app-assets/js/scripts/customizer.min.js"></script>
+<script th:src="@{resources/app-assets/js/core/app-menu.min.js}"></script>
+<script th:src="@{resources/app-assets/js/core/app.min.js}"></script>
+<script th:src="@{resources/app-assets/js/scripts/customizer.min.js}"></script>
 <!-- END ROBUST JS-->
 <!-- BEGIN PAGE LEVEL JS-->
 <script
-	src="resources/app-assets/js/scripts/pages/dashboard-fitness.min.js"></script>
+	th:src="@{resources/app-assets/js/scripts/pages/dashboard-fitness.min.js}"></script>
 <script
-	src="resources/app-assets/js/scripts/pages/project-task-list.min.js"></script>
+	th:src="@{resources/app-assets/js/scripts/pages/project-task-list.min.js}"></script>
 <!-- END PAGE LEVEL JS-->
 
 <!-- BEGIN VENDOR JS-->
-<!--<script src="https://mksol.vn/themes/robust-admin/app-assets/vendors/js/vendors.min.js"></script> -->
+<!--<script th:src="https://mksol.vn/themes/robust-admin/app-assets/vendors/js/vendors.min.js"></script> -->
 <!-- BEGIN VENDOR JS-->
 <!-- BEGIN PAGE VENDOR JS-->
-<!-- <script src="https://mksol.vn/themes/robust-admin/app-assets/vendors/js/ui/jquery.sticky.js"></script>
-    <script src="https://mksol.vn/themes/robust-admin/app-assets/vendors/js/charts/jquery.sparkline.min.js"></script>
-    <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyBDkKetQwosod2SZ7ZGCpxuJdxY3kxo5Po"></script>
-    <script src="https://mksol.vn/themes/robust-admin/app-assets/vendors/js/charts/gmaps.min.js"></script>
-    <script src="https://mksol.vn/themes/robust-admin/app-assets/vendors/js/forms/icheck/icheck.min.js"></script>
-    <script src="https://mksol.vn/themes/robust-admin/app-assets/vendors/js/extensions/jquery.knob.min.js"></script>
-    <script src="https://mksol.vn/themes/robust-admin/app-assets/vendors/js/charts/raphael-min.js"></script>
-    <script src="https://mksol.vn/themes/robust-admin/app-assets/vendors/js/charts/morris.min.js"></script>
-    <script src="https://mksol.vn/themes/robust-admin/app-assets/vendors/js/extensions/unslider-min.js"></script>
-    <script src="https://mksol.vn/themes/robust-admin/app-assets/vendors/js/charts/echarts/echarts.js"></script> -->
+<!-- <script th:src="https://mksol.vn/themes/robust-admin/app-assets/vendors/js/ui/jquery.sticky.js"></script>
+    <script th:src="https://mksol.vn/themes/robust-admin/app-assets/vendors/js/charts/jquery.sparkline.min.js"></script>
+    <script th:src="//maps.googleapis.com/maps/api/js?key=AIzaSyBDkKetQwosod2SZ7ZGCpxuJdxY3kxo5Po"></script>
+    <script th:src="https://mksol.vn/themes/robust-admin/app-assets/vendors/js/charts/gmaps.min.js"></script>
+    <script th:src="https://mksol.vn/themes/robust-admin/app-assets/vendors/js/forms/icheck/icheck.min.js"></script>
+    <script th:src="https://mksol.vn/themes/robust-admin/app-assets/vendors/js/extensions/jquery.knob.min.js"></script>
+    <script th:src="https://mksol.vn/themes/robust-admin/app-assets/vendors/js/charts/raphael-min.js"></script>
+    <script th:src="https://mksol.vn/themes/robust-admin/app-assets/vendors/js/charts/morris.min.js"></script>
+    <script th:src="https://mksol.vn/themes/robust-admin/app-assets/vendors/js/extensions/unslider-min.js"></script>
+    <script th:src="https://mksol.vn/themes/robust-admin/app-assets/vendors/js/charts/echarts/echarts.js"></script> -->
 <!-- END PAGE VENDOR JS-->
 <!-- BEGIN ROBUST JS-->
-<!-- <script src="https://mksol.vn/themes/robust-admin/app-assets/js/core/app-menu.js"></script>
-    <script src="https://mksol.vn/themes/robust-admin/app-assets/js/core/app.js"></script> -->
+<!-- <script th:src="https://mksol.vn/themes/robust-admin/app-assets/js/core/app-menu.js"></script>
+    <script th:src="https://mksol.vn/themes/robust-admin/app-assets/js/core/app.js"></script> -->
 <!-- END ROBUST JS-->
 <!-- BEGIN PAGE LEVEL JS-->
-<!-- <script src="https://mksol.vn/themes/robust-admin/app-assets/js/scripts/ui/breadcrumbs-with-stats.js"></script>
-    <script src="https://mksol.vn/themes/robust-admin/app-assets/js/scripts/pages/dashboard-fitness.js"></script> -->
+<!-- <script th:src="https://mksol.vn/themes/robust-admin/app-assets/js/scripts/ui/breadcrumbs-with-stats.js"></script>
+    <script th:src="https://mksol.vn/themes/robust-admin/app-assets/js/scripts/pages/dashboard-fitness.js"></script> -->
 <!-- END PAGE LEVEL JS-->
+</html>
