Complete UI for Cấu hình screen. Adjust common_javascript.html, common_css.html, common_meta_title.html (use thymeleaf structure to be more precise).

--- a/web/src/main/webapp/WEB-INF/templates/fragments/head.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/head.html
@@ -1,4 +1,7 @@
-<!-- Common Javascripts -->
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:fragment="head">	
+	<!-- Common Javascripts -->
     <link rel="stylesheet" href="/library/webjars/bootstrap/5.2.0/css/bootstrap.min.css">
 
     <link rel="stylesheet" type="text/css" href="/library/skin/default-skin/tool.css">
@@ -13,5 +16,5 @@
     <script type="text/javascript" src="/library/js/headscripts.js"></script>
     
     <!-- Determine the root context of the application.  -->
-    <script th:inline="javascript"> var _ctx = /*[[@{/}]]*/ ''; 
-    </script>
+    <script th:inline="javascript"> var _ctx = /*[[@{/}]]*/ ''; </script>
+</head>
