--- a/web/src/main/webapp/WEB-INF/templates/fragments/hnav.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/hnav.html
@@ -4,12 +4,12 @@
 <ul class="navIntraTool actionToolbar">
   <li>  
     <span title="Đơn hàng">
-      <a th:href="@{/orders-configuration}">Đơn hàng</a>
+      <a th:href="@{/orders-configuration/orders}">Đơn hàng</a>
     </span>
   </li>
   <li> 
     <span title="Trạng thái">
-      <a th:href="@{/orders-configuration}">Trạng thái</a>
+      <a th:href="@{/orders-configuration/status}">Trạng thái</a>
     </span>
   </li>
 </ul>
