--- a/web/src/main/webapp/WEB-INF/templates/fragments/ordersContentWrapperCRM.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/ordersContentWrapperCRM.html
@@ -15,7 +15,7 @@
                         	<button class="btn btn-primary btn-sm order" fdprocessedid="fzh15n"><i class="fas fa-box-open white"></i> Đơn hàng</button>
             			</a>
             			<button class="btn btn-primary btn-sm status" fdprocessedid="fzh15n"><i class="fas fa-clipboard-check white"></i> Trạng thái</button>
-            			<a th:href="@{/orders-configuration}">
+            			<a th:href="@{/orders-configuration/orders}">
             				<button class="btn btn-primary btn-sm config" fdprocessedid="fzh15n"><i class="fas fa-cogs white"></i> Cấu hình</button>
             			</a>
                 	</div>	
