--- a/web/src/main/webapp/WEB-INF/templates/fragments/common_css.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/common_css.html
@@ -1,64 +1,66 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<!--  PHẦN BỔ SUNG THƯ VIỆN CHO ICON FONTAWSOME (PHÒNG TRƯỜNG HỢP CÁC ICON KIA KHÔNG DÙNG ĐƯỢC) -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-
-<!-- <link rel="stylesheet" th:href="https://cdn.jsdelivr.net/npm/jquery-resizable-columns@0.2.3/dist/jquery.resizableColumns.min.css">
-<link rel="stylesheet" th:href="https://cdn.jsdelivr.net/npm/bootstrap-table@1.23.4/dist/bootstrap-table.min.css"> -->
-<link rel="stylesheet" type="text/css" th:href="@{resources/app-assets/css/components_new.min.css}">
-
-<!-- PHẦN CHỈNH SỬA KHI HỆ THỐNG ASSETS TRÊN INTERNET BỊ LỖI -->
-<!-- ICON -->
-<link rel="apple-touch-icon" th:href="@{resources/app-assets/images/ico/apple-icon-120.png}">
-<link rel="shortcut icon" type="image/x-icon" th:href="@{resources/app-assets/images/ico/favicon.ico}">
-<!-- BEGIN VENDOR CSS -->
-<link rel="stylesheet" type="text/css" th:href="@{resources/app-assets/css/vendors.min.css}">
-<link rel="stylesheet" type="text/css" th:href="@{resources/app-assets/vendors/css/forms/icheck/icheck.css}">
-<link rel="stylesheet" type="text/css" th:href="@{resources/app-assets/vendors/css/forms/icheck/custom.css}">
-<link rel="stylesheet" type="text/css" th:href="@{resources/app-assets/vendors/css/charts/morris.css}">
-<link rel="stylesheet" type="text/css" th:href="@{resources/app-assets/vendors/css/extensions/unslider.css}">
-<link rel="stylesheet" type="text/css" th:href="@{resources/app-assets/vendors/css/weather-icons/climacons.min.css}">
-<!-- END VENDOR CSS -->
-<!-- BEGIN ROBUST CSS-->
-<link rel="stylesheet" type="text/css" th:href="@{resources/app-assets/css/app.min.css}">
-<!-- END ROBUST CSS-->
-<!-- BEGIN Page Level CSS-->
-<link rel="stylesheet" type="text/css" th:href="@{resources/app-assets/css/core/menu/menu-types/vertical-compact-menu.min.css}">
-<link rel="stylesheet" type="text/css" th:href="@{resources/app-assets/css/core/colors/palette-gradient.min.css}">
-<link rel="stylesheet" type="text/css" th:href="@{resources/app-assets/css/core/colors/palette-climacon.css}">
-<link rel="stylesheet" type="text/css" th:href="@{resources/app-assets/css/pages/users.min.css}">
-<!-- END Page Level CSS-->
-
-<!-- <link rel="apple-touch-icon" th:href="https://mksol.vn/themes/robust-admin/app-assets/images/ico/apple-icon-120.png">
-    <link rel="shortcut icon" type="image/x-icon" th:href="https://mksol.vn/themes/robust-admin/app-assets/images/ico/favicon.ico"> -->
-
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i%7CMuli:300,400,500,700" rel="stylesheet">
-
-<!-- BEGIN VENDOR CSS-->
-<!--  <link rel="stylesheet" type="text/css" th:href="https://mksol.vn/themes/robust-admin/app-assets/css/vendors.css">
-    <link rel="stylesheet" type="text/css" th:href="https://mksol.vn/themes/robust-admin/app-assets/vendors/css/forms/icheck/icheck.css">
-    <link rel="stylesheet" type="text/css" th:href="https://mksol.vn/themes/robust-admin/app-assets/vendors/css/forms/icheck/custom.css">
-    <link rel="stylesheet" type="text/css" th:href="https://mksol.vn/themes/robust-admin/app-assets/vendors/css/charts/morris.css">
-    <link rel="stylesheet" type="text/css" th:href="https://mksol.vn/themes/robust-admin/app-assets/vendors/css/extensions/unslider.css">
-    <link rel="stylesheet" type="text/css" th:href="https://mksol.vn/themes/robust-admin/app-assets/vendors/css/weather-icons/climacons.min.css"> -->
-<!-- END VENDOR CSS-->
-
-<!-- BEGIN ROBUST CSS-->
-<!-- <link rel="stylesheet" type="text/css" th:href="https://mksol.vn/themes/robust-admin/app-assets/css/app.css"> -->
-<!-- END ROBUST CSS-->
-<!-- BEGIN Page Level CSS-->
-<!-- <link rel="stylesheet" type="text/css" th:href="https://mksol.vn/themes/robust-admin/app-assets/css/core/menu/menu-types/horizontal-top-icon-menu.css">
-    <link rel="stylesheet" type="text/css" th:href="https://mksol.vn/themes/robust-admin/app-assets/css/core/colors/palette-climacon.css">
-    <link rel="stylesheet" type="text/css" th:href="https://mksol.vn/themes/robust-admin/app-assets/css/pages/users.css"> -->
-<!-- END Page Level CSS-->
-
-<!-- BEGIN Custom CSS-->
-<!-- <link rel="stylesheet" type="text/css" th:href="https://mksol.vn/themes/robust-admin/assets/css/style.css"> -->
-
-<!-- <link rel="stylesheet"
-	th:href="https://cdn.jsdelivr.net/npm/bootstrap-table@1.23.4/dist/extensions/fixed-columns/bootstrap-table-fixed-columns.min.css"> -->
-
-
-<!--  <link rel="stylesheet" th:href="<c:url value='/assets/css/new_style.css' />"> -->
+<head th:fragment="common_css">
+	<!--  PHẦN BỔ SUNG THƯ VIỆN CHO ICON FONTAWSOME (PHÒNG TRƯỜNG HỢP CÁC ICON KIA KHÔNG DÙNG ĐƯỢC) -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+	
+	<!-- <link rel="stylesheet" th:href="https://cdn.jsdelivr.net/npm/jquery-resizable-columns@0.2.3/dist/jquery.resizableColumns.min.css">
+	<link rel="stylesheet" th:href="https://cdn.jsdelivr.net/npm/bootstrap-table@1.23.4/dist/bootstrap-table.min.css"> -->
+	<link rel="stylesheet" type="text/css" th:href="@{/resources/app-assets/css/components_new.min.css}">
+	
+	<!-- PHẦN CHỈNH SỬA KHI HỆ THỐNG ASSETS TRÊN INTERNET BỊ LỖI -->
+	<!-- ICON -->
+	<link rel="apple-touch-icon" th:href="@{/resources/app-assets/images/ico/apple-icon-120.png}">
+	<link rel="shortcut icon" type="image/x-icon" th:href="@{/resources/app-assets/images/ico/favicon.ico}">
+	<!-- BEGIN VENDOR CSS -->
+	<link rel="stylesheet" type="text/css" th:href="@{/resources/app-assets/css/vendors.min.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/resources/app-assets/vendors/css/forms/icheck/icheck.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/resources/app-assets/vendors/css/forms/icheck/custom.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/resources/app-assets/vendors/css/charts/morris.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/resources/app-assets/vendors/css/extensions/unslider.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/resources/app-assets/vendors/css/weather-icons/climacons.min.css}">
+	<!-- END VENDOR CSS -->
+	<!-- BEGIN ROBUST CSS-->
+	<link rel="stylesheet" type="text/css" th:href="@{/resources/app-assets/css/app.min.css}">
+	<!-- END ROBUST CSS-->
+	<!-- BEGIN Page Level CSS-->
+	<link rel="stylesheet" type="text/css" th:href="@{/resources/app-assets/css/core/menu/menu-types/vertical-compact-menu.min.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/resources/app-assets/css/core/colors/palette-gradient.min.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/resources/app-assets/css/core/colors/palette-climacon.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/resources/app-assets/css/pages/users.min.css}">
+	<!-- END Page Level CSS-->
+	
+	<!-- <link rel="apple-touch-icon" th:href="https://mksol.vn/themes/robust-admin/app-assets/images/ico/apple-icon-120.png">
+	    <link rel="shortcut icon" type="image/x-icon" th:href="https://mksol.vn/themes/robust-admin/app-assets/images/ico/favicon.ico"> -->
+	
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i%7CMuli:300,400,500,700" rel="stylesheet">
+	
+	<!-- BEGIN VENDOR CSS-->
+	<!--  <link rel="stylesheet" type="text/css" th:href="https://mksol.vn/themes/robust-admin/app-assets/css/vendors.css">
+	    <link rel="stylesheet" type="text/css" th:href="https://mksol.vn/themes/robust-admin/app-assets/vendors/css/forms/icheck/icheck.css">
+	    <link rel="stylesheet" type="text/css" th:href="https://mksol.vn/themes/robust-admin/app-assets/vendors/css/forms/icheck/custom.css">
+	    <link rel="stylesheet" type="text/css" th:href="https://mksol.vn/themes/robust-admin/app-assets/vendors/css/charts/morris.css">
+	    <link rel="stylesheet" type="text/css" th:href="https://mksol.vn/themes/robust-admin/app-assets/vendors/css/extensions/unslider.css">
+	    <link rel="stylesheet" type="text/css" th:href="https://mksol.vn/themes/robust-admin/app-assets/vendors/css/weather-icons/climacons.min.css"> -->
+	<!-- END VENDOR CSS-->
+	
+	<!-- BEGIN ROBUST CSS-->
+	<!-- <link rel="stylesheet" type="text/css" th:href="https://mksol.vn/themes/robust-admin/app-assets/css/app.css"> -->
+	<!-- END ROBUST CSS-->
+	<!-- BEGIN Page Level CSS-->
+	<!-- <link rel="stylesheet" type="text/css" th:href="https://mksol.vn/themes/robust-admin/app-assets/css/core/menu/menu-types/horizontal-top-icon-menu.css">
+	    <link rel="stylesheet" type="text/css" th:href="https://mksol.vn/themes/robust-admin/app-assets/css/core/colors/palette-climacon.css">
+	    <link rel="stylesheet" type="text/css" th:href="https://mksol.vn/themes/robust-admin/app-assets/css/pages/users.css"> -->
+	<!-- END Page Level CSS-->
+	
+	<!-- BEGIN Custom CSS-->
+	<!-- <link rel="stylesheet" type="text/css" th:href="https://mksol.vn/themes/robust-admin/assets/css/style.css"> -->
+	
+	<!-- <link rel="stylesheet"
+		th:href="https://cdn.jsdelivr.net/npm/bootstrap-table@1.23.4/dist/extensions/fixed-columns/bootstrap-table-fixed-columns.min.css"> -->
+	
+	
+	<!--  <link rel="stylesheet" th:href="<c:url value='/assets/css/new_style.css' />"> -->
+</head>
 </html>
