--- a/web/src/main/webapp/WEB-INF/templates/fragments/common_meta_title.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/common_meta_title.html
@@ -1,10 +1,16 @@
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport"
-	content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-<meta name="description"
-	content="Robust admin is super flexible, powerful, clean &amp; modern responsive bootstrap 4 admin template.">
-<meta name="keywords"
-	content="admin template, robust admin template, dashboard template, flat admin template, responsive admin template, web app, crypto dashboard, bitcoin dashboard">
-<meta name="author" content="PIXINVENT">
-<title>Customer Relationship Management</title>
+
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:fragment="head">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport"
+		content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
+	<meta name="description"
+		content="Robust admin is super flexible, powerful, clean &amp; modern responsive bootstrap 4 admin template.">
+	<meta name="keywords"
+		content="admin template, robust admin template, dashboard template, flat admin template, responsive admin template, web app, crypto dashboard, bitcoin dashboard">
+	<meta name="author" content="PIXINVENT">
+	<title>Customer Relationship Management</title>
+</head>
+</html>
