--- a/web/src/main/webapp/WEB-INF/templates/fragments/headerCRM.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/headerCRM.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
-<html>
-
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 </head>
-
 <body>
 	<nav
 		class="header-navbar navbar-expand-md navbar navbar-with-menu fixed-top navbar-dark bg-primary navbar-shadow navbar-brand-center">
 		<div class="navbar-wrapper">
 			<div class="navbar-header">
 				<ul class="nav navbar-nav flex-row">
-					<li class="nav-item mobile-menu d-md-none mr-auto"><a
-						class="nav-link nav-menu-main menu-toggle hidden-xs" href="#">
-							<i class="ft-menu font-large-1"> </i>
-					</a></li>
-					<!-- <li class="nav-item"><a class="navbar-brand" href="../../../html/ltr/vertical-compact-menu-template/index.html"><img class="brand-logo" alt="robust admin logo" src="https://mksol.vn/themes/robust-admin/app-assets/images/logo/logo-light-sm.png"> -->
-					<li class="nav-item"><a class="navbar-brand" href="#"><img
-							class="brand-logo" alt="robust admin logo"
-							src="resources/app-assets/images/logo/logo-light-sm.png">
-							<h3 class="brand-text">CRM</h3></a></li>
-					<li class="nav-item d-md-none"><a
-						class="nav-link open-navbar-container" data-toggle="collapse"
-						data-target="#navbar-mobile"><i class="fa fa-ellipsis-v"></i></a></li>
+					<li class="nav-item mobile-menu d-md-none mr-auto">
+						<a class="nav-link nav-menu-main menu-toggle hidden-xs" href="#">
+							<i class="ft-menu font-large-1"></i>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="navbar-brand" href="#">
+							<img class="brand-logo" alt="robust admin logo" th:src="@{/resources/app-assets/images/logo/logo-light-sm.png}">
+							<h3 class="brand-text">CRM</h3>
+						</a>
+					</li>
+					<li class="nav-item d-md-none">
+						<a class="nav-link open-navbar-container" data-toggle="collapse" data-target="#navbar-mobile">
+							<i class="fa fa-ellipsis-v"></i>
+						</a>
+					</li>
 				</ul>
 			</div>
 			<div class="navbar-container content">
@@ -163,7 +165,7 @@
 										<div class="media">
 											<div class="media-left">
 												<span class="avatar avatar-sm avatar-online rounded-circle"><img
-													src="resources/app-assets/images/portrait/small/avatar-s-1.png"
+													th:src="@{/resources/app-assets/images/portrait/small/avatar-s-1.png}"
 													alt="avatar"><i></i></span>
 											</div>
 											<div class="media-body">
@@ -178,7 +180,7 @@
 										<div class="media">
 											<div class="media-left">
 												<span class="avatar avatar-sm avatar-busy rounded-circle"><img
-													src="resources/app-assets/images/portrait/small/avatar-s-2.png"
+													th:src="@{/resources/app-assets/images/portrait/small/avatar-s-2.png}"
 													alt="avatar"><i></i></span>
 											</div>
 											<div class="media-body">
@@ -193,7 +195,7 @@
 										<div class="media">
 											<div class="media-left">
 												<span class="avatar avatar-sm avatar-online rounded-circle"><img
-													src="resources/app-assets/images/portrait/small/avatar-s-3.png"
+													th:src="@{/resources/app-assets/images/portrait/small/avatar-s-3.png}"
 													alt="avatar"><i></i></span>
 											</div>
 											<div class="media-body">
@@ -208,7 +210,7 @@
 										<div class="media">
 											<div class="media-left">
 												<span class="avatar avatar-sm avatar-away rounded-circle"><img
-													src="resources/app-assets/images/portrait/small/avatar-s-6.png"
+													src="@{/resources/app-assets/images/portrait/small/avatar-s-6.png}"
 													alt="avatar"><i></i></span>
 											</div>
 											<div class="media-body">
@@ -227,7 +229,7 @@
 						<li class="dropdown dropdown-user nav-item"><a
 							class="dropdown-toggle nav-link dropdown-user-link" href="#"
 							data-toggle="dropdown"><span class="avatar avatar-online"><img
-									src="resources/app-assets/images/portrait/small/avatar-s-9.png"
+									th:src="@{/resources/app-assets/images/portrait/small/avatar-s-9.png}"
 									alt="avatar"><i></i></span><span class="user-name">Phuong
 									Ngan</span></a>
 							<div class="dropdown-menu dropdown-menu-right">
@@ -248,6 +250,5 @@
 			</div>
 		</div>
 	</nav>
-
 </body>
 </html>
