--- a/web/src/main/webapp/WEB-INF/templates/ordersConfigurationCRMScreen.html
+++ b/web/src/main/webapp/WEB-INF/templates/ordersConfigurationCRMScreen.html
@@ -4,10 +4,10 @@
 
 <head>
 <!-- START COMMON META AND TITLE -->
-<th:block th:include="fragments/common_meta_title"></th:block>
+<th:block th:replace="~{fragments/common_meta_title :: head}"></th:block>
 <!-- END COMMON META AND TITLE -->
 
-<th:block th:include="fragments/head"></th:block>
+<th:block th:replace="~{fragments/head :: head}"></th:block>
 <link type="text/css" rel="stylesheet" href="/library/webjars/handsontable/handsontable.full.min.css" />
 <script th:inline="javascript" src="/library/webjars/handsontable/handsontable.full.min.js"></script>
 
@@ -16,13 +16,14 @@
 
 
 <!-- START COMMON CSS -->
-<th:block th:include="fragments/common_css"></th:block>
+<th:block th:replace="~{fragments/common_css :: head}"></th:block>
+<!-- <th:block th:replace="~{fragments/common_css :: common_css}"></th:block> -->
 <!-- END COMMON CSS -->
 
-<link rel="stylesheet" type="text/css" th:href="@{resources/css/ordersBtnHorizontalMenu.css}">	
-<link rel="stylesheet" type="text/css" th:href="@{resources/css/new_style.css}">
-<link rel="stylesheet" type="text/css" th:href="@{resources/css/order.css}">
-<link rel="stylesheet" type="text/css" th:href="@{resources/css/orders-configuration.css}">
+<link rel="stylesheet" type="text/css" th:href="@{/resources/css/ordersBtnHorizontalMenu.css}">	
+<link rel="stylesheet" type="text/css" th:href="@{/resources/css/new_style.css}">
+<link rel="stylesheet" type="text/css" th:href="@{/resources/css/order.css}">
+<link rel="stylesheet" type="text/css" th:href="@{/resources/css/orders-configuration.css}">
 </head>
 
 <body
@@ -31,12 +32,12 @@
 	data-col="2-columns">
 
 	<!-- BEGIN HEADER -->
-	<th:block th:include="@{fragments/headerCRM}"></th:block>
+	<th:block th:include="fragments/headerCRM"></th:block>
 	<!-- END HEADER -->
 	
 
 	<!-- BEGIN LEFT MENU NAVIGATION -->
-	<th:block th:include="@{fragments/leftNavCRM}"></th:block>
+	<th:block th:include="fragments/leftNavCRM"></th:block>
 	<!-- END LEFT MENU NAVIGATION -->
 
 	<!--  BEGIN CONTENT -->
@@ -64,16 +65,16 @@
 	<!-- END CONTENT -->
 		
 	<!-- START CUSTOMIZE BUTTON -->
-	<th:block th:include="@{fragments/customizeButton}"></th:block>
+	<th:block th:include="fragments/customizeButton"></th:block>
 	<!-- END CUSTOMIZE BUTTON -->
 
 	<!-- START COMMON JAVASCRIPT -->
-	<th:block th:include="@{fragments/common_javascript}"></th:block>
+	<th:block th:include="fragments/common_javascript"></th:block>
 	<!-- END COMMON JAVASCRIPT -->
 	
 	<!-- FILE JS BỔ SUNG -->
-	<script type="text/javascript" th:src="@{resources/js/orders-configuration/init.js}"></script>
-	<script type="text/javascript" th:src="@{resources/app-assets/js/update/navigate.js}"></script>
+	<script type="text/javascript" th:src="@{/resources/js/orders-configuration/order-init.js}"></script>
+	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/navigate.js}"></script>
 	<!-- Screen Javascripts -->
 
 </body>
