--- a/web/src/main/webapp/WEB-INF/templates/customerListCRMScreen.html
+++ b/web/src/main/webapp/WEB-INF/templates/customerListCRMScreen.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
@@ -277,7 +276,7 @@
 																	class="customer-checkbox" /></td>
 																<td th:text="${customer.id}"></td>
 																<td><a
-																	th:href="@{/customerDetail(id=${customer.id})}"
+																	th:href="@{customerDetail(id=${customer.id})}"
 																	th:text="${customer.name}"></a></td>
 																<!-- <a th:href="@{/customer/detail/{id}(id=${customer.id})}" th:text="${customer.name}"></a> -->
 																<td th:text="${customer.address}"></td>
