--- a/web/src/main/webapp/resources/css/order.css
+++ b/web/src/main/webapp/resources/css/order.css
@@ -69,3 +69,35 @@ h4.title.order-title {
     margin-bottom: 20px;
     padding-top: 20px;
 }
+
+.handsontable a:hover {
+    color: #0b318a !important;
+}
+div#statusModal{
+	display:none; 
+	position:fixed; 
+	top:50%; 
+	left:50%; 
+	bottom:50%;
+	width: fit-content !important;
+	height: fit-content !important;
+	transform:translate(-50%, -50%); 
+	background-color:white; 
+	padding:20px; 
+	border:1px solid #ccc; 
+	z-index:1000;
+}
+div#modalOverlay{
+	display:none; 
+	position:fixed; 
+	top:0; 
+	left:0; 
+	width:100%; 
+	height:100%; 
+	background-color:rgba(0, 0, 0, 0.5); 
+	z-index:999;
+}
+select#statusSelect {
+    background-color: white;
+    color: black;
+}
