--- a/web/src/main/webapp/WEB-INF/templates/ordersCRMScreen.html
+++ b/web/src/main/webapp/WEB-INF/templates/ordersCRMScreen.html
@@ -145,6 +145,62 @@
 	<div id="modalOverlay" onclick="closeModal()">
 	</div>
 	
+	<div class="updateOrderModal">
+		<h3>Cập nhật đơn hàng</h3>
+		<hr>
+	    <form id="orderForm">
+	    	<div class="row1">
+		        <label class="label-estaday">Ngày tạo</label>
+		        	<input class="input-row1" type="date" id="orderDate" value="">
+		        <label class="label-status">Trạng thái</label>
+		        <select id="orderStatus" class="input-row1">
+		            <option value="1">Nhận đơn</option>
+			        <option value="2">Lưu kho</option>
+			        <option value="3">Vận chuyển</option>
+			        <option value="4">Lưu kho lạnh</option>
+			        <option value="5">Giao hàng</option>	
+		        </select>
+		        <label class="label-order-code">Mã đơn hàng</label>
+		       		<input type="text" id="orderCode" placeholder="" class="input-row1">
+		    </div>
+	        
+	        <br/><label>Loại hàng hóa</label>
+	        <input type="text" id="goodsType">
+	
+	        <label>Phương tiện vận chuyển</label>
+	        <input type="text" id="transportMethod">
+	
+	        <h4>Thông tin người gửi</h4>
+	        <label>Họ tên</label>
+	        <input type="text" id="senderName">
+	        <label>SDT</label>
+	        <input type="text" id="senderPhone" placeholder="(+84) 1234567890">
+	        <label>Email</label>
+	        <input type="email" id="senderEmail">
+	
+	        <h4>Thông tin người nhận</h4>
+	        <label>Họ tên</label>
+	        <input type="text" id="receiverName">
+	        <label>SDT</label>
+	        <input type="text" id="receiverPhone">
+	        <label>Email</label>
+	        <input type="email" id="receiverEmail">
+	        <label>Địa chỉ</label>
+	        <input type="text" id="receiverAddress">
+	
+	        <label>Yêu cầu:</label>
+	        <textarea id="requirements"></textarea>
+	
+	        <h4>Tự động cập nhật qua các kênh</h4>
+	        <label><input type="checkbox" id="emailUpdate"> Email</label>
+	        <label><input type="checkbox" id="zaloUpdate"> Zalo</label>
+	        <label><input type="checkbox" id="smsUpdate"> SMS</label>
+	
+	        <button type="button" onclick="saveOrder()">Lưu</button>
+	        <button type="button" onclick="closeOrderModal()">Đóng</button>
+	    </form>
+	</div>
+	
 	</div>
 	
 	<!-- END CONTENT -->
