Comple code "Change title flexibly by button click (Create or Update orders)"

--- a/web/src/main/webapp/WEB-INF/templates/fragments/ordersContentWrapperCRM.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/ordersContentWrapperCRM.html
@@ -23,11 +23,10 @@
 
 			</div>
 			<div class="content-header-left col-md-6 col-12 mb-2">
-				 <div class="row">
+				<div class="empty-div" style="height: 30px;"></div>
+				 <div class="row" style="text-align: right;">
 				 	<div class="heading-elements">
-            			<a th:href="@{/orders}">
-            				<button class="btn btn-primary btn-sm config" fdprocessedid="fzh15n"><i class="fas fa-plus white"></i> Đơn hàng</button>
-            			</a>
+           				<button id="openCreateOrderBtn" class="btn btn-primary btn-sm config" onclick="changeTitle('Tạo mới đơn hàng')"><i class="fas fa-plus white"></i> Đơn hàng</button>
                 	</div>	
 				 </div>
 			</div>
