--- a/web/src/main/webapp/resources/css/order.css
+++ b/web/src/main/webapp/resources/css/order.css
@@ -208,7 +208,6 @@ textarea#textAreaExample2 {
     justify-content: center; 
     margin-top: 20px; 
 }
-
 .row4 button {
     margin: 0 10px; 
     padding: 10px 20px; 
@@ -219,7 +218,17 @@ textarea#textAreaExample2 {
     cursor: pointer; 
     transition: background-color 0.3s; 
 }
-
 .row4 button:hover {
     background-color: #d77a7c; 
+}
+button.closeBtn {
+    margin: 0 10px;
+    padding: 5px 10px;
+    background-color: #e16471;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    text-align: right;
 }
